# lib-linking

./: .gitignore  CMakeLists.txt  README.md  main.cpp
scripts/: build-lib.sh  build.sh  clean.sh  run.sh
src/: lib-name.cpp
src/logger/: logger.cpp  logger.hpp
